--- a/viewer src/viewer.html
+++ b/viewer src/viewer.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iron Heist Poetry Viewer</title>
     <link rel="icon" href="../png src/1.png" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#343a40">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Iron Heist Poetry Viewer">
     <meta property="og:description" content="Read soul-stirring poetry by Iron Heist (John Colt).">
