--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </script>
     <title>My Poetry Collection | Iron Heist (John Colt)</title>
     <link rel="icon" href="png src/1.png" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#343a40">
     <link rel="preload" href="fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="webp src/BG 1.webp" as="image" type="image/webp">
     <link rel="stylesheet" href="styles.css">
