--- a/blog src/blog-post.html
+++ b/blog src/blog-post.html
@@ -8,6 +8,8 @@
     <meta name="author" content="Iron Heist (John Colt)">
     <title>Blog Post | Iron Heist's Poetry</title>
     <link rel="icon" href="../png src/1.png" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#343a40">
     <link rel="preload" href="../fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
