--- a/book-details src/book-details.html
+++ b/book-details src/book-details.html
@@ -17,6 +17,8 @@
     <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
     <title>Book Details | Iron Heist (John Colt)</title>
     <link rel="icon" href="../png src/1.png" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#343a40">
     <link rel="preload" href="../fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
