--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="My Poetry Collection | Iron Heist (John Colt)">
     <meta property="og:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta property="og:image" content="https://yourwebsite.com/poetry.png">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:image" content="https://ironheist.github.io/main/png src/1.png">
+    <meta property="og:url" content="https://ironheist.github.io/main/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="My Poetry Collection | Iron Heist (John Colt)">
     <meta name="twitter:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
+    <meta name="twitter:image" content="https://ironheist.github.io/main/png src/1.png">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "My Poetry Collection | Iron Heist (John Colt)",
         "description": "Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.",
-        "url": "https://yourwebsite.com",
+        "url": "https://ironheist.github.io/main/",
         "author": {
             "@type": "Person",
             "name": "Iron Heist (John Colt)"
         },
-        "image": "https://yourwebsite.com/poetry.png",
+        "image": "https://ironheist.github.io/main/png src/1.png",
         "keywords": "poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You and the Moon, philosophical poetry, emotional poetry"
     }
     </script>
     <title>My Poetry Collection | Iron Heist (John Colt)</title>
     <link rel="icon" href="png src/1.png" type="image/x-icon" />
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#343a40">
     <link rel="preload" href="fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="webp src/BG 1.webp" as="image" type="image/webp">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <header class="site-header">
@@ -262,7 +262,7 @@
         <div class="footer-bottom">
             <p class="date-time" id="date-time"></p>
             <div class="copyright">
-                © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="/cdn-cgi/l/email-protection#7e170c1110161b170d0a483e19131f1712501d1113"><span class="__cf_email__" data-cfemail="b4ddc6dbdadcd1ddc7c082f4d3d9d5ddd89ad7dbd9">[email protected]</span></a>
+                © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="/cdn-cgi/l/email-protection#7e170c1110161b170d0a483e19131f1712501d1113"><span class="__cf_email__" data-cfemail="b4ddc6dbdadcd1ddc7c082f4d3d9d5ddd89ad7dbd9">[email protected]</span></a>
             </div>
             <div class="credits">
                 <p>Created by Iron Heist (John Colt). Icons by <a href="https://www.flaticon.com" target="_blank">Flaticon</a>. Built with AI assistance.</p>
@@ -296,5 +296,6 @@
             });
         });
     </script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93e1c784a970bff1',t:'MTc0Njk2NzU4OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
