--- a/book-details src/book-details.html
+++ b/book-details src/book-details.html
@@ -9,20 +9,20 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Book Details | Iron Heist (John Colt)">
     <meta property="og:description" content="Explore poetry by Iron Heist.">
-    <meta property="og:image" content="https://yourwebsite.com/poetry.png">
-    <meta property="og:url" content="https://yourwebsite.com/book-details.html">
+    <meta property="og:image" content="https://ironheist.github.io/main/png src/1.png">
+    <meta property="og:url" content="https://ironheist.github.io/main/book-details src/book-details.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Book Details | Iron Heist (John Colt)">
     <meta name="twitter:description" content="Explore poetry by Iron Heist.">
-    <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
+    <meta name="twitter:image" content="https://ironheist.github.io/main/png src/1.png">
     <title>Book Details | Iron Heist (John Colt)</title>
     <link rel="icon" href="../png src/1.png" type="image/x-icon" />
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#343a40">
     <link rel="preload" href="../fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="book-details.css">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <header class="site-header">
@@ -180,5 +180,6 @@
             setCurrentYear();
         });
     </script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93e1c783ae3fc013',t:'MTc0Njk2NzU4OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
