--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             When I'm not writing, you can find me lost in thought by the ocean, sketching the stars, or sharing my musings on social media. Thank you for joining me on this poetic journey.
                         </p>
                         <div class="signature">
-                            <img src="png src/2.png" alt="Iron Heist Signature">
+                            <img src="png src/2.png" alt="Iron Heist Signature" class="signature-img">
                         </div>
                     </div>
                 </div>
@@ -294,5 +294,5 @@
             });
         });
     </script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93e31d5c986b4546',t:'MTc0Njk4MTU5MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
