--- a/index.html
+++ b/index.html
@@ -148,12 +148,10 @@
                 <div class="author-bio">
                     <div class="author-image"></div>
                     <div class="bio-text">
-                        <p>
-                            I am <strong>Iron Heist (John Colt)</strong>, a poet and philosopher weaving words from the depths of my soul. My journey with poetry began as a way to process the complexities of love, loss, and the human experience. Each verse I write is a reflection of my heart—a tapestry of emotions that I hope resonates with those who feel deeply.
-                        </p>
-                        <p>
-                            When I'm not writing, you can find me lost in thought by the ocean, sketching the stars, or sharing my musings on social media. Thank you for joining me on this poetic journey.
-                        </p>
+                        <p>I’m Jay, known online as Iron Heist or John Colt. I write poetry that’s raw, sad, and honest. My work lives in the quiet spaces between heartbreak, overthinking, and late-night questions about life, death, and whether anything really matters.</p>
+                        <p>Writing started as a way to survive grief, loneliness, and the weight of memories I couldn’t carry out loud. I don’t chase happy endings or pretend to have answers—just feelings, moments, and truths that ache to be heard.</p>
+                        <p>Most of my poems come from a place of silence—the kind you feel at 3 a.m. when everything slows down and all the pain you’ve been avoiding finally speaks. I write for the ones who overthink, who miss people they shouldn’t, who carry scars in places no one sees.</p>
+                        <p>If you’ve ever sat in silence and wondered if anyone else feels like you do, maybe my poems will make you feel a little less alone. Or at least, understood.</p>
                         <div class="signature">
                             <img src="png src/2.png" alt="Iron Heist Signature" class="signature-img">
                         </div>
