--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h2>Whispers of the Soul</h2>
-            <p class="hero-subtitle">Discover the poetry that dances between light and shadow</p>
+            <h2>Iron Heist</h2>
+            <p class="hero-subtitle">These aren’t poems. Just thoughts I couldn’t shut up.</p>
             <button onclick="redirectToRandomPoem()" class="cta-button">Read a Random Poem</button>
         </div>
     </section>
